# daachorse

./: Cargo.toml
src/: bytewise.rs  charwise.rs  intpack.rs  lib.rs  serializer.rs
src/bytewise/: iter.rs
src/charwise/: mapper.rs
