[package]
name = "daachorse"
version = "1.0.0"
edition = "2021"
rust-version = "1.61"
authors = [
    "Koichi Akabe <vbkaisetsu@gmail.com>",
    "Shunsuke Kanda <shnsk.knd@gmail.com>",
]
description = "Daachorse: Double-Array Aho-Corasick"
license = "MIT OR Apache-2.0"
homepage = "https://github.com/daac-tools/daachorse"
repository = "https://github.com/daac-tools/daachorse"
readme = "README.md"
keywords = ["search", "text", "aho", "multi", "double-array"]
categories = ["text-processing", "algorithms", "data-structures", "no-std"]
exclude = [".*"]

[dependencies]
bitcode = { version = "0.6.5", default-features = false, optional = true, features = [
    "derive",
] }
serde = { version = "1.0.219", default-features = false, optional = true, features = [
    "derive",
    "alloc",
] }

[dev-dependencies]
serde_json = "1.0.108"

[features]
default = ["alloc"]

alloc = []
bitcode = ["dep:bitcode"]
serde = ["alloc", "dep:serde"]

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[workspace]
members = ["daacfind"]
